# midi-monitor

./: .gitignore  Cargo.toml  README.md  flake.nix  truce.toml
crates/chord-detection/: Cargo.toml
crates/chord-detection/src/: lib.rs  note.rs
crates/chord-detection/src/chord/: detect.rs  intervals.rs  mod.rs  roman.rs  score.rs  symbol.rs  templates.rs
crates/midi-monitor-plugin/: Cargo.toml
crates/midi-monitor-plugin/src/: lib.rs  params.rs  ui.rs
src/: lib.rs  main.rs  note.rs  ui.rs
src/chord/: detect.rs  mod.rs  symbol.rs
