[workspace]
members = [
    "crates/chord-detection",
    "crates/midi-monitor-plugin",
]
default-members = ["crates/midi-monitor-plugin"]
resolver = "3"

# Custom profile for `cargo truce install --shell`. The shell-mode
# build (`cargo build --profile shell --features ...,shell`) lands the
# shell binary at `target/shell/lib<crate>.dylib`, independent of
# `target/release/` (where regular `cargo build --release` writes) and
# `target/debug/` (where `cargo build` writes). Inherits release for
# DSP perf parity.
[profile.shell]
inherits = "release"
